folder structure and improve CSS"

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lift simulation app</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
@@ -18,11 +15,11 @@
         <main>
           <div>
             <label for="inputFloor">Number of floors : </label>
-            <input type="number" id="inputFloor" placeholder="floors" />
+            <input type="number" id="inputFloor" />
           </div>
           <div>
             <label for="inputLift">Number of Lifts : </label>
-            <input type="number" id="inputLift" placeholder="Lifts" />
+            <input type="number" id="inputLift" />
           </div>
         </main>
       </form>
@@ -43,6 +40,6 @@
       </main>
     </section>
 
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
